Criação do gerenciamento de arquivo para Projeto Node.js, Next.js, Node.js